--- a/sway/config
+++ b/sway/config
@@ -4,30 +4,34 @@
 #
 # Read `man 5 sway` for a complete reference.
 
+# font for titlebars and other system stuff
+font Ubuntu 14
+
 ### Variables
 #
 # Logo key. Use Mod1 for Alt.
-set $mod Mod4
+set $mod Mod1
 # Home row direction keys, like vim
 set $left h
 set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term urxvt
+set $term alacritty
 # Your preferred application launcher
-set $menu dmenu_run
+set $menu bemenu-run
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/sway/)
-output * bg /usr/share/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+#output * bg /usr/share/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #
 # Example configuration:
 #
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
+output HDMI-A-1 resolution 1920x1080 position 0,0 subpixel rgb
 
 ### Input configuration
 #
@@ -43,6 +47,11 @@ output * bg /usr/share/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # The escape symbol "\" has to be removed.
 # Read `man 5 sway-input` for more information about this section.
+
+# options for all keyboards
+input type:keyboard {
+  xkb_numlock enabled
+}
 
 ### Key bindings
 #
