--- a/sway/config
+++ b/sway/config
@@ -15,7 +15,7 @@ set $down j
 set $up k
 set $right l
 # terminal emulator
-set $term alacritty
+set $term kitty
 # application launcher
 set $menu wofi
 # screen locker
