--- a/sway/config
+++ b/sway/config
@@ -21,7 +21,7 @@ set $menu bemenu-run
 # screen locker
 set $locker swaylock
 # browser
-set $browser qutebrowser
+set $browser chromium
 
 ### Output configuration
 # wallpaper
@@ -34,6 +34,8 @@ output HDMI-A-1 resolution 1920x1080 position 0,0 subpixel rgb
 #input 1:1:AT_Translated_Set_2_keyboard {
 input type:keyboard {
   xkb_numlock enabled
+  repeat_rate 20
+  repeat_delay 250
 }
 
 ### Key bindings
