--- a/sway/config
+++ b/sway/config
@@ -1,10 +1,22 @@
 # Read `man 5 sway` for a complete reference.
 
+# included per https://wiki.archlinux.org/title/Sway#Configuration
+include /etc/sway/config.d/*
+
 # Eyecandy settings
 # font for titlebars and other system stuff
-font Ubuntu 14
+font League Spartan 14
 # disable titlebars
 default_border pixel 2
+# set GTK appearance stuff
+# make sure this matches the GTK config at ~/.config/gtk-3.0/settings.ini
+set $gnome-schema org.gnome.desktop.interface
+exec_always {
+	gsettings set $gnome-schema gtk-theme 'Clearlooks'
+	gsettings set $gnome-schema icon-theme 'Adwaita'
+	gsettings set $gnome-schema cursor-theme 'Adwaita'
+	gsettings set $gnome-schema font-name 'League Spartan Semi-Light 12'
+}
 
 ### Variables
 # Logo key (Mod4). Use Mod1 for Alt.
