--- a/sway/config
+++ b/sway/config
@@ -88,8 +88,8 @@ bindsym $mod+Shift+e exit
 # lock the screen
 bindsym $mod+Escape exec $locker
 
-# suspend the computer to RAM - doesn't work yet!
-#bindsym $mod+Shift+Escape exec systemctl suspend
+# suspend the computer to RAM
+bindsym $mod+Shift+Escape exec systemctl suspend
 
 # turn off the computer
 bindsym $mod+Control+Shift+Escape exec sudo poweroff
