--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -587,8 +587,8 @@ bell_on_tab yes
 
 #: Color scheme {{{
 
-# foreground #dddddd
-# background #000000
+foreground #839496
+background #002b36
 
 #: The foreground and background colors
 
@@ -658,8 +658,8 @@ bell_on_tab yes
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-color0 #073642
-color8 #002b36
+color0 #002b36
+color8 #073642
 
 #: black
 
@@ -678,7 +678,7 @@ color11 #657b83
 
 #: yellow
 
-color4  #268bd2
+color4  #868bd2
 color12 #839496
 
 #: blue
